# supabase-realtime-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
examples/: basic.rs  test_channel.rs  test_connection.rs  test_heartbeat.rs  test_http_fallback.rs  test_postgres_changes.rs  test_presence.rs  test_presence_multiuser.rs  test_push.rs  test_reconnection.rs  test_send.rs  test_unsubscribe.rs
src/: channel.rs  client.rs  client_state.rs  connection.rs  event.rs  heartbeat.rs  http.rs  lib.rs  presence.rs  push.rs  router.rs  task_manager.rs
src/channel/: channel.rs  config.rs  core.rs  mod.rs  postgres_changes.rs  presence.rs  push.rs  state.rs
src/client/: builder.rs  client.rs  connection.rs  core.rs  mod.rs  state.rs
src/infrastructure/: heartbeat.rs  http.rs  mod.rs  timer.rs
src/messaging/: event.rs  mod.rs  router.rs
src/types/: constants.rs  error.rs  message.rs  mod.rs
src/websocket/: factory.rs  mod.rs
