[package]
name = "supabase-realtime-rs"
version = "0.1.0"
edition = "2024"
authors = ["Scaraude"]
description = "Unofficial Rust client for Supabase Realtime (Phoenix Channels)"
license = "MIT"
repository = "https://github.com/Scaraude/supabase-realtime-rs"
keywords = ["supabase", "realtime", "websocket", "phoenix", "channels"]
categories = ["api-bindings", "web-programming::websocket", "asynchronous"]
readme = "README.md"

[dependencies]
chrono = "0.4.42"
futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tracing = "0.1.41"
tungstenite = "0.28.0"
url = "2.5.7"
uuid = {version = "1.18.1", features = ["v4"]}

[dev-dependencies]
tracing-subscriber = "0.3.20"
dotenvy = "0.15"
